# shogi

./: .gitignore  CMakeLists.txt  README.md
include/: app.h  board_panel.h  board_state.h  common.h  game_logic.h  main_frame.h  piece.h  svg_renderer.h
src/: app.cpp  board_panel.cpp  board_state.cpp  game_logic.cpp  main.cpp  main_frame.cpp  piece.cpp  svg_renderer.cpp
src/ai/basic/: basic_ai.cpp  basic_ai.h
src/core/board/: board.cpp  board.h  move.cpp  move.h  piece.cpp  piece.h
src/core/komaochi/: komaochi.cpp  komaochi.h
src/engine/usi/: usi_engine.cpp  usi_engine.h
src/net/basic/: network_manager.cpp  network_manager.h
src/ui/board/: board_widget.cpp  board_widget.h  main_window.cpp  main_window.h
tests/: CMakeLists.txt
